--- a/.github/workflows/autopep8.yml
+++ b/.github/workflows/autopep8.yml
@@ -7,9 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        # with:
+        with:
           # token: ${{ secrets.REPO_ACCESS_TOKEN }}
-          # ref: ${{ github.head_ref }}
+          ref: ${{ github.head_ref }}
       - name: autopep8
         id: autopep8
         uses: peter-evans/autopep8@v2
