--- a/.github/workflows/autopep8.yml
+++ b/.github/workflows/autopep8.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          # token: ${{ secrets.REPO_ACCESS_TOKEN }}
+          # token: ${{ secrets.PEP8SECRET }}
           ref: ${{ github.head_ref }}
       - name: autopep8
         id: autopep8
