--- a/.github/workflows/pretteier.yml
+++ b/.github/workflows/pretteier.yml
@@ -19,4 +19,4 @@ jobs:
         run: npm ci
 
       - name: Check formatting
-        run: npx prettier --check .
+        run: npx prettier --check *.js
