--- a/.github/workflows/autopep8.yml
+++ b/.github/workflows/autopep8.yml
@@ -13,11 +13,4 @@ jobs:
         id: autopep8
         uses: peter-evans/autopep8@v2
         with:
-          args: --exit-code --recursive --in-place --aggressive --aggressive .
-      - name: Commit autopep8 changes
-        if: steps.autopep8.outputs.exit-code == 2
-        run: |
-          git config --global user.name 'Python Superman'
-          git config --global user.email 'Python-Superman@users.noreply.github.com'
-          git commit -am "Automated autopep8 fixes"
-          git push
+          args: --exit-code --recursive --aggressive --aggressive .
