--- a/.github/workflows/autopep8.yml
+++ b/.github/workflows/autopep8.yml
@@ -13,4 +13,4 @@ jobs:
         id: autopep8
         uses: peter-evans/autopep8@v2
         with:
-          args: --exit-code --recursive --aggressive --aggressive .
+          args: --exit-code --recursive --diff --aggressive --aggressive .
