--- a/.github/workflows/autopep8.yml
+++ b/.github/workflows/autopep8.yml
@@ -9,8 +9,11 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: ${{ github.head_ref }}
-      - name: autopep8
-        id: autopep8
-        uses: peter-evans/autopep8@v2
+      - name: Setup Python
+        uses: actions/setup-python@v2
         with:
-          args: --exit-code --recursive --diff --aggressive --aggressive .
+          python-version: '3.x'
+      - name: Install autopep8
+        run: pip install autopep8
+      - name: Run autopep8
+        run: autopep8 --exit-code --recursive --diff --aggressive --aggressive .
