--- a/.github/workflows/autopep8.yml
+++ b/.github/workflows/autopep8.yml
@@ -7,13 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: autopep8
+        uses: peter-evans/autopep8@v2
         with:
-          ref: ${{ github.head_ref }}
-      - name: Setup Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'
-      - name: Install autopep8
-        run: pip install autopep8
-      - name: Run autopep8
-        run: autopep8 --exit-code --recursive --diff --aggressive --aggressive .
+          args: --recursive --aggressive --aggressive .
+      - name: Fail if autopep8 made changes
+        if: steps.autopep8.outputs.exit-code == 2
+        run: exit 1
