--- a/.github/workflows/autopep8.yml
+++ b/.github/workflows/autopep8.yml
@@ -10,7 +10,7 @@ jobs:
       - name: autopep8
         uses: peter-evans/autopep8@v2
         with:
-          args: --recursive --aggressive --aggressive .
+          args: --recursive --in-place --aggressive --aggressive .
       - name: Fail if autopep8 made changes
         if: steps.autopep8.outputs.exit-code == 2
         run: exit 1
