refactor: New copy and paste of action
Copied and pasted pieces of the action from the Github Action marketplace

--- a/.github/workflows/autopep8.yml
+++ b/.github/workflows/autopep8.yml
@@ -7,7 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.head_ref }}
       - name: autopep8
+        id: autopep8
         uses: peter-evans/autopep8@v2
         with:
           args: --exit-code --recursive --in-place --aggressive --aggressive .
