refactor: BridgetIT format to make sure failure happens
Currently the action is not failing as it should when code changes are made. So hoping this modification will cause the action fail as anticipated.

--- a/.github/workflows/autopep8.yml
+++ b/.github/workflows/autopep8.yml
@@ -6,14 +6,19 @@ jobs:
     if: github.event.pull_request.head.repo.full_name == github.repository
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-        with:
-          ref: ${{ github.head_ref }}
-      - name: autopep8
-        id: autopep8
-        uses: peter-evans/autopep8@v2
-        with:
-          args: --exit-code --recursive --in-place --aggressive --aggressive .
-      - name: Fail if autopep8 made changes
-        if: steps.autopep8.outputs.exit-code == 2
-        run: exit 1
+    - uses: actions/checkout@v2
+      with:
+        ref: ${{ github.head_ref }}
+    - name: autopep8
+      uses: peter-evans/autopep8@v2
+      with:
+        args: --exit-code --recursive --in-place --aggressive --aggressive .
+    - name: Check for changes
+      id: git-check
+      run: |
+        if [[ -n $(git status --porcelain) ]]; then
+          echo "autopep8 has made changes to the code."
+          exit 1
+        else
+          echo "No changes were made by autopep8."
+        fi
