--- a/.github/workflows/autopep8.yml
+++ b/.github/workflows/autopep8.yml
@@ -10,7 +10,7 @@ jobs:
       - name: autopep8
         uses: peter-evans/autopep8@v2
         with:
-          args: --exit-code --recursive --diff --aggressive --aggressive .
+          args: --exit-code --recursive --in-place --aggressive --aggressive .
       - name: Check for changes
         id: git-check
         run: |
