--- a/.github/workflows/autopep8.yml
+++ b/.github/workflows/autopep8.yml
@@ -7,6 +7,12 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: ${{ github.head_ref }}
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+      - name: Install autopep8
+        run: pip install autopep8
       - name: autopep8
         uses: peter-evans/autopep8@v2
         with:
