--- a/.github/workflows/autopep8.yml
+++ b/.github/workflows/autopep8.yml
@@ -13,18 +13,15 @@ jobs:
           python-version: '3.x'
       - name: Install autopep8
         run: pip install autopep8
-      - name: autopep8
-        uses: peter-evans/autopep8@v2
-        with:
-          args: --exit-code --recursive --in-place --aggressive --aggressive .
-      - name: Check for changes
-        id: git-check
+      - name: Run autopep8 and check for changes
         run: |
-          if [[ -n $(git status --porcelain) ]]; then
-            echo "The following linting errors were found:"
-            # Capture and display the diff output
-            DIFF_OUTPUT=$(autopep8 --exit-code --recursive --diff --aggressive --aggressive .)
-            echo "$DIFF_OUTPUT"
+          # Run autopep8 and capture the diff output into a file
+          autopep8 --exit-code --recursive --diff --aggressive --aggressive . > autopep8_diff_output.txt
+          # Check if the file has content (i.e., there are changes)
+          if [[ -s autopep8_diff_output.txt ]]; then
+            echo "Linting failed, see diff changes below:"
+            # Display the contents of the diff output file
+            cat autopep8_diff_output.txt
             exit 1
           else
             echo "No changes were made by autopep8."
